syntax = "proto3";

package maptool;

option java_multiple_files = true;
option java_package = "net.rptools.maptool.server.proto";
option java_outer_classname = "MessageTypeProtos";

/*
 * For easier differentiation between protobuf classes and "normal" classes
 * protobuf classes end with "Dto" or "Msg".
 */

import "data_transfer_objects.proto";
import "drawing_dto.proto";

message AddTopologyMsg {
  string zone_guid = 1;
  AreaDto area = 2;
  TopologyModeDto mode = 3;
}

message BootPlayerMsg {
  string player_name = 1;
}

message BringTokensToFrontMsg {
  string zone_guid = 1;
  repeated string token_guids = 2;
}

message ChangeZoneDisplayNameMsg {
  string zone_guid = 1;
  string name = 2;
}

message ClearAllDrawingsMsg {
  string zone_guid = 1;
  string layer = 2;
}

message ClearExposedAreaMsg {
  string zone_guid = 1;
  bool global_only = 2;
}

message DrawMsg {
  string zone_guid = 1;
  PenDto pen = 2;
  DrawableDto drawable = 3;
}

message EditTokenMsg {
  string zone_guid = 1;
  TokenDto token = 2;
}

message PutTokenMsg {
  string zone_guid = 1;
  TokenDto token = 2;
}

message EnforceNotificationMsg {
  bool enforce = 1;
}

message EnforceZoneMsg {
  string zone_guid = 1;
}

message EnforceZoneViewMsg {
  string zone_guid = 1;
  int32 x = 2;
  int32 y = 3;
  double scale = 4;
  int32 gm_width = 5;
  int32 gm_height = 6;
}

message ExecFunctionMsg {
  string target = 1;
  string source = 2;
  string function_name = 3;
  repeated ScriptTypeDto argument = 4;
}